@@ -1,3 +1,7 @@
+2005-07-14  Marcus Meissner  <marcus@jet.franken.de>
+
+	* g3.c: Added Ricoh Caplio GX 8.
+
 2005-07-11  Marcus Meissner  <marcus@jet.franken.de>
 	
 	* g3.c: Added Ricoh R2 as reported.
